--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">androidChat</string>
+    <string name="need_a_new_account">Need a new account?</string>
 </resources>
