--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">androidChat</string>
+    <string name="app_name">Kraken Chat</string>
     <string name="need_a_new_account">Need a new account?</string>
     <string name="display_name">Display Name</string>
     <string name="create_account">Create Account</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="log_out">Log Out</string>
 </resources>
